--- a/notes-app-api/serverless.yml
+++ b/notes-app-api/serverless.yml
@@ -1,6 +1,7 @@
+# NOTE: update this with your service name
 service: notes-app-api
 
-# Create an optimized package for our functions
+# Create an optimized package for our functions 
 package:
   individually: true
 
@@ -12,5 +13,20 @@ plugins:
 provider:
   name: aws
   runtime: nodejs10.x
-  stage: prod
-  region: us-east-1
+  stage: dev
+  region: us-east-2
+  # To load environment variables externally
+  # rename env.example to .env and uncomment
+  # the following line. Also, make sure to not
+  # commit your .env.
+  #
+  #environment:
+sampleEnvVar: ${env:SAMPLE_ENV_VAR}
+
+functions:
+  hello:
+    handler: handler.hello
+    events:
+      - http:
+          path: hello
+          method: get
